# audiowaveform

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.txt  ChangeLog  Dockerfile  Doxyfile  README.md  audiowaveform.rb
.github/workflows/: cmake.yml  codeql.yml
amazonlinux/: AmazonLinuxStaticBuild.md  BuildStaticAmazonLinux.Dockerfile.txt
aws-lambda/: Dockerfile  README.md  build.sh  package.json  run.sh
aws-lambda/amazonlinux-1/: Dockerfile
aws-lambda/amazonlinux-latest/: Dockerfile
aws-lambda/examples/serverless-nodejs-bbc/: .gitignore  README.md  handler.js  package.json  serverless.yml
aws-lambda/scripts/: build.sh
cmake/modules/: FindLibFLAC.cmake  FindLibGD.cmake  FindLibId3Tag.cmake  FindLibMad.cmake  FindLibOgg.cmake  FindLibOpus.cmake  FindLibSndFile.cmake  FindLibVorbis.cmake  SystemInfo.cmake
debian/: changelog  control  copyright  rules
doc/: DataFormat.md  audiowaveform.1  audiowaveform.5
packaging/rpm/: Makefile
packaging/rpm/SPECS/: audiowaveform.spec
rpm/: Dockerfile-almalinux9  Dockerfile-amazon-linux-2  Dockerfile-centos7  Dockerfile-centos8  Dockerfile-debian  Dockerfile-debian10  Dockerfile-debian11  Dockerfile-debian12  README.md  build_all.sh  build_deb_debian.sh  build_deb_debian10.sh  build_deb_debian11.sh  build_deb_debian12.sh  build_rpm_almalinux9.sh  build_rpm_amazon_linux_2.sh  build_rpm_centos7.sh  build_rpm_centos8.sh  cmdline.sh
src/: Array.h  AudioFileReader.cpp  AudioFileReader.h  AudioLoader.cpp  AudioLoader.h  AudioProcessor.cpp  AudioProcessor.h  BStdFile.cpp  BStdFile.h  Config.h.in  DurationCalculator.cpp  DurationCalculator.h  Error.cpp  Error.h  FileFormat.cpp  FileFormat.h  FileHandle.cpp  FileHandle.h  FileUtil.cpp  FileUtil.h  GdImageRenderer.cpp  GdImageRenderer.h  Log.cpp  Log.h  Main.cpp  Math.cpp  Math.h  MathUtil.cpp  MathUtil.h  MonoConverter.cpp  MonoConverter.h  Mp3AudioFileReader.cpp  Mp3AudioFileReader.h  OptionHandler.cpp  OptionHandler.h  Options.cpp  Options.h  ProgressReporter.cpp  ProgressReporter.h  Rgb.cpp  (+24 more)
src/madlld-1.1p1/: .cvsignore  CHANGELOG  Makefile  README  bstdfile.c  bstdfile.h  madlld.1  madlld.c
src/pdjson/: .gitignore  Makefile  README.md  pdjson.c
src/pdjson/tests/: pretty.c  stream.c  tests.c
test/: AudioFileReaderTest.cpp  FileFormatTest.cpp  FileUtilTest.cpp  GdImageRendererTest.cpp  MathTest.cpp  MathUtilTest.cpp  Mp3AudioFileReaderTest.cpp  OptionHandlerTest.cpp  OptionsTest.cpp  ProgressReporterTest.cpp  RgbaTest.cpp  SndFileAudioFileReaderTest.cpp  TimeTest.cpp  TimeUtilTest.cpp  WavFileWriterTest.cpp  WaveformBufferTest.cpp  WaveformGeneratorTest.cpp  WaveformRescalerTest.cpp
test/data/: 07023003_8bit_64spp_2channel.json  07023003_8bit_64spp_2channel.txt  test_file_mono.flac  test_file_mono.raw  test_file_stereo.flac  test_file_stereo.oga  test_file_stereo.opus  test_file_stereo_8bit_64spp.json  test_file_stereo_8bit_64spp.txt  test_file_stereo_8bit_64spp_flac.json  test_file_stereo_8bit_64spp_mp3.json  test_file_stereo_8bit_64spp_oga.json  test_file_stereo_8bit_64spp_opus.json  test_file_stereo_8bit_64spp_wav.json  test_file_stereo_8bit_64spp_wav.txt  test_file_stereo_8bit_64spp_wav_auto_scale.json
test/mocks/: MockAudioProcessor.h
test/util/: FileDeleter.cpp  FileDeleter.h  FileUtil.cpp  FileUtil.h  Streams.cpp  Streams.h  TempFilename.cpp  TempFilename.h
ubuntu/: README.md  package.sh
